feat(products): add regulated alcohol barcode support
